fix: Markdown lint

--- a/_posts/2023-07-04-sgs.markdown
+++ b/_posts/2023-07-04-sgs.markdown
@@ -3,31 +3,32 @@ title:  "三国杀武将技能概率"
 category: math
 tag: sgs
 ---
-# 前言
+## 前言
 
 本文的主体内容取自于本人十年前在百度帖吧三国杀吧的一篇帖子：[【理论】数学与三国杀——三国杀武将技能概率](https://tieba.baidu.com/p/2450798324)。现加以整理、改进和删增。
 
-本文通过对三国杀某些武将技能相关的概率及期望的研究，使这些技能的强度和收益可以精确量化，从而对玩家在特定游戏局中选将、发动技能、出牌顺序等起到帮助作用。 
+本文通过对三国杀某些武将技能相关的概率及期望的研究，使这些技能的强度和收益可以精确量化，从而对玩家在特定游戏局中选将、发动技能、出牌顺序等起到帮助作用。
 
-# 研究范围
+## 研究范围
 
-## 卡牌
+### 卡牌
 
 本文只考察军争篇卡牌。其点数、花色以及类型具体分布如下：
 
 ![军争篇卡牌分布1](/assets/img/sgs/junzheng1.png)
 
-（图片来源：https://www.cnblogs.com/yhm138/articles/14091928.html，有勘误）
+（图片来源：<https://www.cnblogs.com/yhm138/articles/14091928.html>，有勘误）
 
 ![军争篇卡牌分布2](/assets/img/sgs/junzheng2.png)
 
-（图片来源：https://www.cnblogs.com/yhm138/articles/14091928.html）
+（图片来源：<https://www.cnblogs.com/yhm138/articles/14091928.html>）
 
-## 数学模型
+### 数学模型
 
-### 理想模型
+#### 理想模型
 
 若无特殊说明，本文所采用的数学模型均为理想模型，即假设任意一个时刻，牌堆中的卡牌数量无限多，且某牌按照其在上述军争篇中的概率均匀分布。例如：
+
 - 任一花色的概率为$$ 1/4 $$
 - 任一点数的概率为$$ 1/13 $$[^footnote1]
 - 普通（非延时类）锦囊牌的概率为$$ 43/160 $$
@@ -38,16 +39,18 @@ tag: sgs
 
 此外，本文中所有的小数结果仅保留四位有效数字。
 
-### 现实模型 
+#### 现实模型
 
 在某些情况下，本文也会采用现实模型。该模型有以下特点：
+
 - 游戏模式为军争篇八人场
 - **不放回**抽样
 - 假设在整局游戏过程中，场上存活角色平均为4名，每名角色平均有手牌2张，装备牌2张；场上平均有1张判定牌。这样，牌堆中的牌数平均为：$$ 160-4*(2+2)-1=143 $$。
 
-## 武将
+### 武将
 
 文中所涉及到的武将选取自以下系列：
+
 - 标准版
 - 神话再临·风火林山阴雷
 - 一将成名2011-2015
@@ -56,6 +59,7 @@ tag: sgs
 - SP
 
 另外，有些武将技能的概率计算过于简单直白，也不在本篇的讨论之列，如:
+
 - 夏侯惇**刚烈**（成功概率$$ 3/4 $$）
 - 神关羽**武魂**（失败概率$$ 13/160 = 0.08125 $$）
 - 顾雍**秉壹**（摸牌概率$$ 1/2^{X-1} $$）
@@ -67,13 +71,13 @@ tag: sgs
 
 - 秦宓**天辩**（拼点赢概率$$ 3/52*1/13\sum_{i=0}^{11}i+16/52 = 203/338 \approxeq 0.6006 $$）
 
-# 武将技能概率
+## 武将技能概率
 
-## 伯努利试验
+### 伯努利试验
 
 有一些武将技能概率问题符合典型的伯努利试验下的概率分布。我们以邓艾、甄姬和孟获三名武将的技能为例一一说明。对每名武将都会采用理想模型（有放回）和现实模型（不放回）进行分析。
 
-### 邓艾（神话再临·山）
+#### 邓艾（神话再临·山）
 
 ![邓艾](/assets/img/sgs/ai_deng.png)
 
@@ -83,7 +87,7 @@ tag: sgs
 
 下面我们来研究可以发动觉醒技**凿险**时所需的**屯田**次数。
 
-#### 理想模型
+【理想模型】
 
 定义发动觉醒技**凿险**时所需的**屯田**次数为$$ X $$，并定义一次伯努利试验（[Bernoulli trial](https://en.wikipedia.org/wiki/Bernoulli_trial)）的“成功”为判定非♥，而“失败”为判定♥。由此可知，$$ X $$为成功和失败次数之和。若定义成功次数为$$ r $$，则$$ X $$符合负二项分布（[Negative binomial distribution](https://en.wikipedia.org/wiki/Negative_binomial_distribution))。
 
@@ -107,7 +111,7 @@ $$ \operatorname{E}(X) = \frac{r}{p} = 4, \quad \operatorname{Var}(X) = \frac{r(
 
 这说明在理想情况下，发动觉醒技**凿险**时所需的**屯田**次数平均为4次。
 
-#### 现实模型
+【现实模型】
 
 定义发动觉醒技**凿险**时所需的**屯田**次数为$$ X $$，牌堆中的牌数为$$ N $$，牌堆中♥的牌数为$$ K $$ ($$ K \le N $$)，并定义一次伯努利试验的“成功”为判定♥，而“失败”为判定非♥（注意：此处的定义与理想模型下刚好相反）。若定义失败次数为$$ r $$，则成功次数符合负超几何分布（[Negative hypergeometric distribution](https://en.wikipedia.org/wiki/Negative_hypergeometric_distribution)）。
 
@@ -131,7 +135,7 @@ $$ \operatorname{Var}(X) = \frac{12N(N+1)(3N-8)}{(3N+4)^{2}(3N+8)} $$
 
 可见，$$ \operatorname{E}(X) $$与$$ N $$正相关，且小于理想模型下**屯田**次数的数学期望。
 
-### 甄姬（标准版）
+#### 甄姬（标准版）
 
 ![甄姬](/assets/img/sgs/empress_zhen.png)
 
@@ -139,7 +143,7 @@ $$ \operatorname{Var}(X) = \frac{12N(N+1)(3N-8)}{(3N+4)^{2}(3N+8)} $$
 
 下面我们来研究**洛神**所获得的牌数。
 
-#### 理想模型
+【理想模型】
 
 定义**洛神**获得的牌数为$$ Y $$，并定义一次伯努利试的“成功”为判定红牌，而“失败”为判定黑牌。很显然，$$ Y $$属于失败次数，且其概率分布符合几何分布（[Geometric distribution](https://en.wikipedia.org/wiki/Geometric_distribution)）的第二种形式。
 
@@ -173,7 +177,7 @@ $$ \operatorname{Geom}(p) = \operatorname{NB}(1,p) $$
 
 $$ p_{Y}(k \ge 8) = 1 - \sum_{k = 0}^7{p_Y(k)} = \frac{1}{256} \approxeq 0.003906 $$
 
-#### 现实模型
+【现实模型】
 
 定义**洛神**获得的牌数为$$ X $$，牌堆中的牌数为$$ N $$，牌堆中红牌数为$$ K $$ ($$ K \le N $$)，并定义一次伯努利试验的“成功”为判定黑牌，而“失败”为判定红牌（注意：此处的定义与理想模型下刚好相反）。我们已经知道几何分布是负二项分布的特例，所以成功次数符合负超几何分布（[Negative hypergeometric distribution](https://en.wikipedia.org/wiki/Negative_hypergeometric_distribution)），且失败次数$$ r=1 $$。
 
@@ -197,7 +201,7 @@ $$ \operatorname{Var}(X) = \frac{N^2(N+1)}{(N+2)(N+4)} $$
 
 $$ \overline{\operatorname{E}} = \frac{1}{1+\frac{2}{143}} \approxeq 0.9862 $$
 
-### 孟获（神话再临·林）
+#### 孟获（神话再临·林）
 
 ![孟获](/assets/img/sgs/huo_meng.png)
 
@@ -205,7 +209,7 @@ $$ \overline{\operatorname{E}} = \frac{1}{1+\frac{2}{143}} \approxeq 0.9862 $$
 
 下面我们来研究**再起**获得的体力值。
 
-#### 理想模型
+【理想模型】
 
 定义在损失$$ X \enspace (0 \lt X \le 4) $$体力值的情况下，**再起**所获得的体力值为$$ H $$，并定义一次伯努利试验的“成功”为判定♥，而“失败”为判定非♥。很显然，$$ H $$属于成功次数，且其概率分布符合二项分布（[Binomial distribution](https://en.wikipedia.org/wiki/Binomial_distribution)）$$ H \sim \operatorname{B}(n,p) $$。
 
@@ -253,7 +257,7 @@ $$ X = \lceil \frac{8}{3+R} \rceil $$
 
 可见，在**再起**的背景下，$$ 0 \lt R \le 2 $$。
 
-#### 现实模型
+【现实模型】
 
 定义牌堆中的牌数为$$ N $$，牌堆中♥牌数为$$ K $$ ($$ K \le N $$)。在此模型下，伯努利试验是不放回的取样，此时成功次数符合超几何分布（[Hypergeometric distribution](https://en.wikipedia.org/wiki/Hypergeometric_distribution)） $$ H \sim HG_{N,K,n}(k) $$。
 
@@ -283,7 +287,7 @@ $$ NHG_{N,K,r}(k)=1-HG_{N,N-K,k+r}(r-1) $$
 
 我们由此可以发现孟获**再起**和邓艾**屯田**的内在联系。
 
-### 伯努利试验概率分布小结
+#### 伯努利试验概率分布小结
 
 以上武将技能分析涵盖了抽样问题的四种概率分布：
 
@@ -293,7 +297,7 @@ $$ NHG_{N,K,r}(k)=1-HG_{N,N-K,k+r}(r-1) $$
 
 还有几名武将的技能符合以上几种分布，我们简略列举如下。由于分析过程类似，我们将只讨论理想模型而忽略现实模型。
 
-### 黄月英（标准版）
+#### 黄月英（标准版）
 
 ![黄月英](/assets/img/sgs/yueying_huang.png)
 
@@ -309,9 +313,9 @@ $$ X \sim NB(r,p) $$
 
 $$ \operatorname{E}(X) = \frac{r}{p} = \frac{160}{117}r \approxeq 1.3675r, \quad \operatorname{Var}(X) = \frac{r(1-p)}{p^{2}} = \frac{6880}{13689}r \approxeq 0.5026r $$
 
-## 二次函数
+### 二次函数
 
-### 王朗（SP）
+#### 王朗（SP）
 
 ![王朗](/assets/img/sgs/lang_wang.webp)
 
@@ -377,13 +381,13 @@ $$
 
 ![鼓舌死亡概率](/assets/img/sgs/gushe2.png)
 
-## 生日问题
+### 生日问题
 
-### 孙资&刘放（原创之魂2016）
+#### 孙资&刘放（原创之魂2016）
 
 ![孙资刘放](/assets/img/sgs/zi_sun_and_fang_liu.webp){: width="400" }
 
-（图片来源：https://www.bilibili.com/read/cv16369119/）
+（图片来源：<https://www.bilibili.com/read/cv16369119>）
 
 **瑰藻**：若你于弃牌阶段弃置过至少两张牌且这些牌花色均不相同，则你可以回复1点体力或摸一张牌。
 
@@ -401,11 +405,11 @@ $$ {\bar {p}}(n) = \frac{m!}{(m-n)!m^{n}}, \quad 1 \lt n \le m $$
 
 ![瑰藻概率](/assets/img/sgs/guizao.png)
 
-### 周泰（神话再临·风）
+#### 周泰（神话再临·风）
 
 ![周泰](/assets/img/sgs/tai_zhou.webp){: width="400" }
 
-（图片来源：https://www.bilibili.com/read/cv15635764/）
+（图片来源：<https://www.bilibili.com/read/cv15635764>）
 
 **不屈**：**锁定技**，当你处于濒死状态时，你将牌堆顶的一张牌置于你的武将牌上，称为“创”，若此牌的点数与已有的“创”点数均不同，则你将体力回复至1点。若出现相同点数则将此牌置入弃牌堆，若你的武将牌上有“创”，则你的手牌上限与“创”的数量相等。
 
@@ -435,7 +439,7 @@ $$ \operatorname{E}(X) \sim \sqrt{\frac{\pi m}{2}}+\frac {2}{3} \approxeq 5.1856
 
 $$ p_{X}(k \ge 9) = 1 - \sum_{k = 2}^8{p_X(k)} \approxeq 0.06361 $$
 
-#### 现实模型
+【理想模型】
 
 若考虑【2】与【Q】的概率较于其他点数略高，我们可以对PMF做细微修正，得到更加准确的数学期望：
 
@@ -443,7 +447,7 @@ $$ \operatorname{E}(X) \approxeq 5.2065 $$
 
 可见，此结果的差异完全可以忽略。
 
-### 神吕蒙（神话再临·风）
+#### 神吕蒙（神话再临·风）
 
 ![神吕蒙](/assets/img/sgs/shen_meng_lv.png)
 
@@ -467,7 +471,7 @@ $$ \operatorname{E}(X) = m(1-(1-\frac{1}{m})^n) = \frac{781}{256} \approxeq 3.05
 
 $$ \operatorname{Var}(X) = m(m-1)(1-\frac{2}{m})^{n}+m(1-\frac{1}{m})^{n}-m^2(1-\frac{1}{m})^{2n} = \frac{27735}{65536} \approxeq 0.4232 $$
 
-### 袁绍（神话再临·火）
+#### 袁绍（神话再临·火）
 
 ![袁绍](/assets/img/sgs/shao_yuan.png)
 
@@ -487,13 +491,11 @@ $$p_{X}(n) = 1-\prod_{k=1}^{n-1}\left(1-{\frac{\min(k, m)}{m}}\right)$$
 
 ![乱击1概率](/assets/img/sgs/luanji1.png)
 
-## 级数
+对于袁绍的技能**乱击**，有个更有意思的课题：当手牌数为$$ n $$时，可以发动**乱击**的次数（见[下一节“级数”](#级数)）。
 
-### 袁绍（神话再临·火）
+### 级数
 
-对于袁绍的技能**乱击**，有个更有意思的课题：当手牌数为$$ n $$时，可以发动**乱击**的次数。
-
-#### 引理
+【引理】
 
 为了方便讨论，我们首先求解这个问题的简化版本：求$$ n $$张手牌恰好可以凑成$$ r=n/2 $$对共有多少种方式。换句话说，求$$ n $$张手牌$$ m $$种花色中，若每种花色的数目都是偶数，共有多少种方式。
 
@@ -517,7 +519,7 @@ $$ o_{2r}^{4} = 2⋅4^{r-1}(4^{r−1}-1) = 2t(t-1) $$
 
 $$ e_{2r}^4+o_{2r}^4 = 4^{n-1} $$
 
-#### 概率及期望计算
+【概率及期望计算】
 
 有了以上引理，可以求解当手牌数为$$ n $$时，可发动**乱击**次数$$ X $$的PMF：
 
@@ -557,13 +559,13 @@ $$ \operatorname{E}(X) = \frac{1}{2^{n}}+\frac{n}{2}-1, \quad n \in \mathbb{N}_0
 
 ![乱击2期望](/assets/img/sgs/luanji2.png)
 
-## 凸多胞形
+### 凸多胞形
 
-### 曹冲（新一将成名2013）
+#### 曹冲（新一将成名2013）
 
 ![曹冲](/assets/img/sgs/chong_cao.png){: width="400" }
 
-（图片来源：https://www.bilibili.com/read/cv15576366/）
+（图片来源：<https://www.bilibili.com/read/cv15576366>）
 
 **称象**：当你受到伤害后，你可以亮出牌堆顶的四张牌，然后你获得其中的任意张点数之和不大于13的牌。
 
@@ -747,9 +749,9 @@ polytope > print $p4->N_LATTICE_POINTS;
 
 $$ \operatorname{E}(K) = \frac{62272}{28561} \approxeq 2.1803, \quad \operatorname{Var}(K) = \frac{399322010}{815730721} \approxeq 0.4895 $$
 
-## 子集和问题
+### 子集和问题
 
-### 糜竺（SP）
+#### 糜竺（SP）
 
 ![糜竺](/assets/img/sgs/zhu_mi.webp){: width="400" }
 
@@ -784,7 +786,7 @@ def ziyuan(n):
 
 该程序的时间复杂度为$$ \mathcal{O}(n^{13}) $$，空间复杂度为$$ \mathcal{O}(n^{12}) $$。由于计算量巨大，我们只计算$$ 0 \lt X \le 10 $$的情况：
 
-```
+```text
 1
 37
 931
@@ -807,16 +809,15 @@ def ziyuan(n):
 
 定义**事件$$ A_X $$**：在前$$ X $$张牌$$ (\omega_1, \omega_2, \dots, \omega_X) $$中，存在一个非空子集，其点数之和为13。
 
-
 对于所有$$ X \geq 1 $$，有$$ A_X \subseteq A_{X+1} $$。这是因为前$$ X $$张牌的取值在增加第$$ X+1 $$张牌后保持不变，原有的子集仍然存在。因此，如果$$ \omega \in A_X $$，则必有$$ \omega \in A_{X+1} $$。
 
 根据概率论中的[单调性原理](https://statproofbook.github.io/P/prob-mon.html)：如果事件$$ A \subseteq B $$，则有$$ P(A) \leq P(B) $$。因此，$$ P(A_X) \leq P(A_{X+1}) $$。
 
-# 技能比较
+## 技能比较
 
 最后，我们在理想模型下比较一些类似的技能。
 
-## 额外摸牌
+### 额外摸牌
 
 ||英姿|闭月|洛神|涉猎|再起|
 |期望|1|1|1|1.0508|0.25X|
@@ -828,7 +829,7 @@ def ziyuan(n):
 1. **涉猎**和**再起**需要亮出所得的牌
 1. **再起**的摸牌数一般小于1，但有一定概率可以回复体力
 
-## 受到伤害后摸牌
+### 受到伤害后摸牌
 
 ||遗计|称象|
 |期望|2|2.1803|
@@ -838,12 +839,11 @@ def ziyuan(n):
 1. **称象**的摸牌数不稳定
 1. **称象**的摸牌有点数的限制
 
-## 总结
- 
+### 总结
+
 以上几个同类技能各有优劣，可见设计是比较均衡的。
 
-# 脚注
+## 脚注
 
 [^footnote1]: 实际上，卡牌的点数并非均匀分布。【2】和【Q】这两种点数的概率为$$ 7/80 $$，而其它的点数概率为$$ 3/40 $$。由于这种差异对计算结果的影响可以忽略不记，我们还是认为所有卡牌点数是均匀分布的。
-[^footnote2]: https://mathworld.wolfram.com/SubsetSumProblem.html
-
+[^footnote2]: <https://mathworld.wolfram.com/SubsetSumProblem.html>
